# drccolumbia

./: blahblahblah.csv  grasphose.hubo.traj  grasphose.traj
drccolumbia/: CMakeLists.txt  package.xml
hubo_hose_task_planner/: CMakeLists.txt  package.xml
hubo_hose_task_planner/launch/: object_grasp_planner_sim.launch
hubo_hose_task_planner/src/nodes/: ObjectGraspServer.py  WalkingOdometry.py  new_utilities.py
hubo_hose_task_planner_msgs/: CMakeLists.txt  package.xml
hubo_hose_task_planner_msgs/srv/: CompoundMotionSrv.srv  PosePlanningSrv.srv
