<?xml version="1.0"?>
<package>
  <name>drccolumbia</name>
  <version>0.1.0</version>
  <description>The drccolumbia package</description>
  <maintainer email="jweisz@cs.columbia.edu">Jonathan Weisz</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
