<?xml version="1.0"?>
<package>
  <name>hubo_hose_task_planner</name>
  <version>0.0.2</version>
  <description>The hubo_manipulation_planner package contains messages and libraries common to Hubo's planning packages.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jgarcia39@gatech.edu">Juan Carlos Garcia</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>hubo_planner_common</build_depend>
  <build_depend>hubo_hose_task_planner_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>hubo_planner_common</run_depend>
  <run_depend>hubo_hose_task_planner_msgs</run_depend>


</package>