<?xml version="1.0"?>
<package>
  <name>hubo_hose_task_planner_msgs</name>
  <version>0.0.2</version>
  <description>hubo hose task planner message package.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jweisz@cs.columbia.edu">Jonathan Weisz</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>hubo_planning_common</build_depend>
  <build_depend>hubo_robot_msgs</build_depend>
  
  

  <run_depend>roscpp</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>genmsg</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hubo_planning_common</run_depend>
  <run_depend>hubo_robot_msgs</run_depend>

</package>